src/components/hero/hero.module.css
.hero {
    width: 100%;
    max-width: 100%;
    min-height: 100lvh;
    height: 100lvh;
    display: flex;
    justify-content: flex-end;
    align-items: flex-start;
    position: relative;
    z-index: 1;
    overflow: hidden;
}

.hero::after {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    height: 30vh;
    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255,255,255, 1) 100%);
}

.content {
    z-index: 2;
    width: 60%;
    position: absolute;
    left: 0;
    bottom: 0;
    color: var(--color-reverse);
    mix-blend-mode: difference;
    padding: var(--space-lg) 0 var(--space-2xl) var(--page-margin-narrow);
    display: flex;
    flex-direction: column;
    gap: var(--space-md);
}

.ticker {
    /* width: 100px; */
    max-width: 100%;
    border-top: 1px solid currentColor;
    border-bottom: 1px solid currentColor;
    overflow: hidden;
    display: flex;
    flex-direction: row;
    padding: var(--space-xs) 0;
}

.ticker p {
    padding-right: var(--space-xs);
    will-change: translate;
    animation: tickerScroll 6s linear 0s infinite;
    flex-shrink: 0;
    margin: 0;
}

@keyframes tickerScroll {
    from {
        translate: 0% 0%;
    }
    to {
        translate: -100% 0%;
    }
}

.heroMedia {
    flex: 45% 0 1;
    z-index: 1;
    overflow: hidden;
    padding: var(--header-height) var(--page-margin) var(--space-lg) 0;
    display: flex;
    justify-content: flex-end;
}

.heroAsset {
    border-radius: var(--radius-lg);
    /* aspect-ratio: 3 / 5; */
    max-height: 85lvh;
    height: auto;
    max-width: 100%;
}

.backgroundMedia {
    position: absolute;
    object-fit: cover;
    offset: 0;
    height: 100%;
    min-width: 100%;
    z-index: 0;
}

@media screen and (max-width: 768px) {

    .hero {
        flex-direction: column;
        align-items: stretch;
        justify-content: flex-start;
        gap: var(--space-md);
    }

    .content {
        position: relative;
        width: auto;
        padding: var(--header-height) var(--page-margin) 0;
    }

    .heroMedia {
        flex: auto 0 0;
        width: 100%;
        padding: 0 var(--page-margin);
        justify-content: flex-start;
    }

  }

